# dns-toy

./: README.md  dnstoy.opam  dune-project
lib/: debug.ml  dune  network.ml  query.ml  response.ml  types.ml  utils.ml
test/: dnstoy.ml  dune  test.ml
